--- a/README
+++ b/README
@@ -13,14 +13,14 @@ This will create:
 $> rake db:migrate
     
 2.acts_as_microblog_author
-ÔÚÄãµÄÓÃ»§ÀàÖÐÌí¼Óacts_as_microblog_author£¨È·±£ÏµÍ³ÖÐÓÐÇÒÖ»ÓÐÒ»¸öÀàµ÷ÓÃÁË¸Ã·½·¨£©£¬
-  ÒÔÓÃ»§ÀàUserÎªÀý£¨ÄãµÄÓÃ»§Àà¿ÉÒÔÊÇÈÎºÎÃû³Æ£©
+åœ¨ä½ çš„ç”¨æˆ·ç±»ä¸­æ·»åŠ acts_as_microblog_authorï¼ˆç¡®ä¿ç³»ç»Ÿä¸­æœ‰ä¸”åªæœ‰ä¸€ä¸ªç±»è°ƒç”¨äº†è¯¥æ–¹æ³•ï¼‰ï¼Œ
+  ä»¥ç”¨æˆ·ç±»Userä¸ºä¾‹ï¼ˆä½ çš„ç”¨æˆ·ç±»å¯ä»¥æ˜¯ä»»ä½•åç§°ï¼‰
 class User < ActiveRecord::Base
   acts_as_microblog_author
 end
 uf = User.first
 uf.microblogs        # => []
-uf.microblogs.create :content => '´óÊÂÐ¡ÊÂ¶¼¿ÉÒÔÔÚÕâÀïÐ´£¬²»¹ýÃ¿ÌõÎ§²±×ÖÊý²»ÄÜ³¬¹ý140'
+uf.microblogs.create :content => 'å¤§äº‹å°äº‹éƒ½å¯ä»¥åœ¨è¿™é‡Œå†™ï¼Œä¸è¿‡æ¯æ¡å›´è„–å­—æ•°ä¸èƒ½è¶…è¿‡140'
 uf.microblogs.size   # => 1
 uf.microblogs.first.author == uf # => true
 			
@@ -35,13 +35,13 @@ ul.follower_ids      # => []
 uf.following_ids     # => []
 
 3.acts_as_microblog_subject
-ÏµÍ³ÖÐÈôÓÐ¸úÎ§²± 1:N ¹ØÏµµÄmodel,ÔÚmodelÖÐÌí¼ÓÈçÏÂ·½·¨£¨ÒÔPostÎªÀý£©£º
+ç³»ç»Ÿä¸­è‹¥æœ‰è·Ÿå›´è„– 1:N å…³ç³»çš„model,åœ¨modelä¸­æ·»åŠ å¦‚ä¸‹æ–¹æ³•ï¼ˆä»¥Postä¸ºä¾‹ï¼‰ï¼š
 class User < ActiveRecord::Base
   acts_as_microblog_subject :has_many => :comments
 end
 pf = Post.first
 pf.comments          # => []
-pf.comments.create :author_id => 1, :content => 'µÚÒ»Æ¬ÎÄÕÂµÄµÚÒ»¸öÆÀÂÛ'
+pf.comments.create :author_id => 1, :content => 'ç¬¬ä¸€ç‰‡æ–‡ç« çš„ç¬¬ä¸€ä¸ªè¯„è®º'
 pf.comments.size     # => 1
 
 
